feat: comment delete (#5)